--- a/mbdyn/libraries/Makefile.am
+++ b/mbdyn/libraries/Makefile.am
@@ -3,7 +3,6 @@ include $(top_srcdir)/build/top.mk
 ## Process this file with automake to produce Makefile.in
 
 SUBDIRS = \
-libmbc \
 libmbutil \
 libobjs \
 libcolamd \
@@ -17,5 +16,9 @@ SUBDIRS += \
 libmbmath \
 libmbwrap \
 libann
+
+if BUILD_MBC
+SUBDIRS += libmbc
+endif
 
 include $(top_srcdir)/build/bot.mk
