--- a/mbdyn/manual/Makefile.am
+++ b/mbdyn/manual/Makefile.am
@@ -38,7 +38,10 @@ input/beamsect.eps \
 input/discctrl.eps \
 input/elicottero.eps \
 input/MatR2vec.eps \
+input/rod_bezier.eps \
 input/shellPic.eps \
+ \
+input/module-hydrodynamic_plain_bearing.tex \
  \
 input/f77sub.f \
  \
