--- a/mbdyn/configure.ac
+++ b/mbdyn/configure.ac
@@ -387,7 +387,7 @@ dnl GINACLIB_CONFIG=
 GINACLIB_LIBS=
 GINACLIB_CPPFLAGS=
 wl=
-EXPORT_FLAG_SPEC=
+EXPORT_DYNAMIC_FLAG_SPEC=
 
 dnl MODULES_DIRS=
 MODULE_LOADPATH=
