--- a/mbdyn/manual/Makefile.am
+++ b/mbdyn/manual/Makefile.am
@@ -40,10 +40,10 @@ input/elicottero.eps \
 input/MatR2vec.eps \
 input/rod_bezier.eps \
 input/shellPic.eps \
-\
+ \
 input/cardano.eps \
 input/inline.eps \
-input/revHinge.ep
+input/revHinge.eps \
 input/shellPic.eps \
  \
 input/module-hydrodynamic_plain_bearing.tex \
