--- a/mbdyn/mbdyn/base/Makefile.am
+++ b/mbdyn/mbdyn/base/Makefile.am
@@ -71,8 +71,6 @@ force.cc \
 force.h \
 gmres.cc \
 gmres.h \
-hfelem.cc \
-hfelem.h \
 hint.h \
 hint_impl.cc \
 hint_impl.h \
@@ -188,10 +186,12 @@ nodist_libbase_la_SOURCES =
 
 if BUILD_STATIC_MODULES
 nodist_libbase_la_SOURCES += \
+$(srcdir)/../../modules/module-minmaxdrive/module-minmaxdrive.cc \
+$(srcdir)/../../modules/module-minmaxdrive/module-minmaxdrive.h \
 $(srcdir)/../../modules/module-nodedistdrive/module-nodedistdrive.cc \
 $(srcdir)/../../modules/module-nodedistdrive/module-nodedistdrive.h \
-$(srcdir)/../../modules/module-minmaxdrive/module-minmaxdrive.cc \
-$(srcdir)/../../modules/module-minmaxdrive/module-minmaxdrive.h
+$(srcdir)/../../modules/module-hfelem/module-hfelem.cc \
+$(srcdir)/../../modules/module-hfelem/module-hfelem.h
 ## add more...
 
 if USE_OCTAVE
