Update of socket functionality to work on Windows (plus disable Nagles)
This is a large commit which allows sockets to be compiled in an MS
windows environment. It also disables Nagles algorithm which is
unsuitible for the communication style used by MBDyn as it sends
small amounts of data and blocks.

--- a/mbdyn/elec/Makefile.am
+++ b/mbdyn/elec/Makefile.am
@@ -45,6 +45,7 @@ AM_CPPFLAGS = \
 -I$(srcdir)/../../libraries/libmbutil \
 -I$(srcdir)/../../libraries/libmbmath \
 -I$(srcdir)/../../libraries/libmbwrap \
+-I$(srcdir)/../../libraries/libmbc \
 -I$(srcdir)/../../mbdyn \
 -I$(srcdir)/../../mbdyn/base \
 -I$(srcdir)/../../mbdyn/struct \
