--- a/mbdyn/Makefile.am
+++ b/mbdyn/Makefile.am
@@ -72,6 +72,7 @@ AM_CPPFLAGS = \
 -I$(srcdir)/../libraries/libmbutil \
 -I$(srcdir)/../libraries/libmbmath \
 -I$(srcdir)/../libraries/libmbwrap \
+-I$(srcdir)/../libraries/libmbc \
 -I$(srcdir)/../mbdyn/base \
 -I$(srcdir)/../mbdyn/struct \
 -I../mbdyn/thermo \
