--- a/mbdyn/thermo/Makefile.am
+++ b/mbdyn/thermo/Makefile.am
@@ -25,6 +25,7 @@ AM_CPPFLAGS = \
 -I$(srcdir)/../../libraries/libmbmath \
 -I$(srcdir)/../../libraries/libmbwrap \
 -I$(srcdir)/../../libraries/libcppad \
+-I$(srcdir)/../../libraries/libmbc \
 -I$(srcdir)/../../mbdyn \
 -I$(srcdir)/../../mbdyn/base \
 -I$(srcdir)/../../mbdyn/struct \
