Add new nonlinear solver BFGS and related linear solvers QR and SPQR Add interfaces for google::dense_hash_map and std::unordered_map

--- a/libraries/libmbmath/Makefile.am
+++ b/libraries/libmbmath/Makefile.am
@@ -105,6 +105,8 @@ libmbmath.la \
 @LAPACK_LIBS@ \
 @Y12_LIBS@ \
 @PASTIX_LIBS@ \
+@QRUPDATE_LIBS@ \
+@SUITESPARSEQR_LIBS@ \
 @METIS_LIBS@ \
 @BLAS_LIBS@ \
 @FCLIBS@ \
@@ -124,6 +126,8 @@ libmbmath.la \
 @LAPACK_LIBS@ \
 @Y12_LIBS@ \
 @PASTIX_LIBS@ \
+@QRUPDATE_LIBS@ \
+@SUITESPARSEQR_LIBS@ \
 @METIS_LIBS@ \
 @BLAS_LIBS@ \
 @FCLIBS@ \
@@ -143,6 +147,8 @@ libmbmath.la \
 @LAPACK_LIBS@ \
 @Y12_LIBS@ \
 @PASTIX_LIBS@ \
+@QRUPDATE_LIBS@ \
+@SUITESPARSEQR_LIBS@ \
 @METIS_LIBS@ \
 @BLAS_LIBS@ \
 @FCLIBS@ \
@@ -162,6 +168,8 @@ libmbmath.la \
 @LAPACK_LIBS@ \
 @Y12_LIBS@ \
 @PASTIX_LIBS@ \
+@QRUPDATE_LIBS@ \
+@SUITESPARSEQR_LIBS@ \
 @METIS_LIBS@ \
 @BLAS_LIBS@ \
 @FCLIBS@ \
@@ -181,6 +189,8 @@ libmbmath.la \
 @LAPACK_LIBS@ \
 @Y12_LIBS@ \
 @PASTIX_LIBS@ \
+@QRUPDATE_LIBS@ \
+@SUITESPARSEQR_LIBS@ \
 @METIS_LIBS@ \
 @BLAS_LIBS@ \
 @FCLIBS@ \
@@ -208,6 +218,8 @@ libmbmath.la \
 @LAPACK_LIBS@ \
 @Y12_LIBS@ \
 @PASTIX_LIBS@ \
+@QRUPDATE_LIBS@ \
+@SUITESPARSEQR_LIBS@ \
 @METIS_LIBS@ \
 @BLAS_LIBS@ \
 @FCLIBS@ \
