--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -129,6 +129,8 @@ MYLIBS += \
 @UMFPACK_LIBS@ \
 @KLU_LIBS@ \
 @PASTIX_LIBS@ \
+@QRUPDATE_LIBS@ \
+@SUITESPARSEQR_LIBS@ \
 @MESCHACH_LIBS@ \
 @BLAS_LIBS@ \
 @FCLIBS@ \
