Add new module hydrodynamic_plain_bearing2

--- a/mbdyn/struct/Makefile.am
+++ b/mbdyn/struct/Makefile.am
@@ -152,6 +152,9 @@ nodist_libstruct_la_SOURCES += \
 $(srcdir)/../../modules/module-hydrodynamic_plain_bearing/module-hydrodynamic_plain_bearing.cc \
 $(srcdir)/../../modules/module-hydrodynamic_plain_bearing/module-hydrodynamic_plain_bearing.h \
 \
+$(srcdir)/../../modules/module-hydrodynamic_plain_bearing2/module-hydrodynamic_plain_bearing2.cc \
+$(srcdir)/../../modules/module-hydrodynamic_plain_bearing2/module-hydrodynamic_plain_bearing2.h \
+\
 $(srcdir)/../../modules/module-uni_in_plane/module-uni_in_plane.h \
 $(srcdir)/../../modules/module-uni_in_plane/module-uni_in_plane.cc \
 \
